--- a/CodingTest1/ParathesisMatcher.csproj
+++ b/CodingTest1/ParathesisMatcher.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BracketChecker.cs" />
+    <Compile Include="ParathesisMatcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
